Fix average calculation

--- a/parsing.ipynb
+++ b/parsing.ipynb
@@ -135,7 +135,7 @@
     "\n",
     "    # Last session\n",
     "    num_sessions += 1\n",
-    "    avr_duration = last - session_start\n",
+    "    avr_duration += last - session_start\n",
     "    avr_duration /= num_sessions\n",
     "\n",
     "    # Add computed values as features\n",
